--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       POSTGRES_HOST: postgres
       POSTGRES_DB: markers
       POSTGRES_USER: markers_app
-      POSTGRES_PASSWORD: some_secret_password
+      POSTGRES_PASSWORD: password123
     command: sleep infinity
 
   postgres:
@@ -20,7 +20,7 @@ services:
     environment:
       POSTGRES_DB: markers
       POSTGRES_USER: markers_app
-      POSTGRES_PASSWORD: some_secret_password
+      POSTGRES_PASSWORD: password123
     ports:
       - 5432:5432
 
